test_suite/alan-2022-examples/failing/005880_mutation.alan
source Mkxfa begin leave 5 <= := 035 end
